# DOTA-GSI

./: .gitignore  LICENSE  README.md
dota-gsi-server/: .env.example  .gitignore  Cargo.toml  README.md
dota-gsi-server/src/: main.rs
dota-gsi-web/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
dota-gsi-web/src/: App.css  App.tsx  main.tsx
dota-gsi-web/src/components/: AbilityBar.tsx  AbilityRow.tsx  CooldownFanOverlay.tsx  HealthManaBar.tsx  HeroHeader.tsx  ItemGrid.tsx  ItemsPanel.tsx  PlayerCard.tsx
dota-gsi-web/src/hooks/: useAbilityImageUrl.ts  useHeroImageUrl.ts  useItemImageUrl.ts  useSmoothedCooldown.ts
dota-gsi-web/src/lib/: debug.ts  dotaHero.ts  imageProbe.ts  math.ts  steamCdn.ts  steamStatic.ts
