[package]
name = "dota-gsi-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "*", features = ["ws"] }
tokio = { version = "*", features = ["rt-multi-thread", "macros", "signal", "fs"] }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
clap = { version = "*", features = ["derive", "env"] }
dotenvy = "*"
tracing = "*"
tracing-subscriber = { version = "*", features = ["env-filter"] }
tower-http = { version = "*", features = ["trace"] }
redis = { version = "*", features = ["tokio-comp"] }
sha2 = "*"
time = { version = "*", features = ["formatting"] }
anyhow = "*"
